--- a/Views/IssizlikOrani/Delete.cshtml
+++ b/Views/IssizlikOrani/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -82,6 +83,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.KadınOran2)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Aciklama)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Aciklama)
         </dd>
     </dl>
     
