--- a/Views/IssizlikOrani/Edit.cshtml
+++ b/Views/IssizlikOrani/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -72,6 +73,11 @@
                 <label asp-for="KadınOran2" class="control-label"></label>
                 <input asp-for="KadınOran2" class="form-control" />
                 <span asp-validation-for="KadınOran2" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Aciklama" class="control-label"></label>
+                <input asp-for="Aciklama" class="form-control" />
+                <span asp-validation-for="Aciklama" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
