--- a/Views/IssizlikOrani/Index.cshtml
+++ b/Views/IssizlikOrani/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -48,6 +49,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.KadınOran2)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Aciklama)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -89,6 +93,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.KadınOran2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Aciklama)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
