--- a/Views/IssizlikOrani/Details.cshtml
+++ b/Views/IssizlikOrani/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentSystemWeb.Models.IssizlikOrani
+﻿@model IEnumerable<StudentSystemWeb.Models.IssizlikOrani>
 
 @{
     ViewData["Title"] = "Details";
@@ -7,91 +7,101 @@
 
 <h1>Details</h1>
 
-<div>
-    <h4>IssizlikOrani</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Toplam1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Toplam1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Toplam2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Toplam2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Erkek1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Erkek1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Erkek2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Erkek2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Kadın1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Kadın1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Kadın2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Kadın2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ToplamOran1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ToplamOran1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ToplamOran2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ToplamOran2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ErkekOran1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ErkekOran1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ErkekOran2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ErkekOran2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KadınOran1)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.KadınOran1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KadınOran2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.KadınOran2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Aciklama)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aciklama)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Toplam1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Toplam2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Erkek1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Erkek2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Kadın1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Kadın2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ToplamOran1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ToplamOran2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ErkekOran1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ErkekOran2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.KadınOran1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.KadınOran2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Aciklama)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Toplam1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Toplam2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Erkek1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Erkek2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Kadın1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Kadın2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ToplamOran1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ToplamOran2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ErkekOran1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ErkekOran2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KadınOran1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KadınOran2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Aciklama)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
